configs: fix [X5-1825] Enable sound card driver in perf config
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: I7cf8c346f0d104e2659ccd084993ebc04971e094

--- a/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
@@ -501,6 +501,7 @@ CONFIG_SND_SOC_ES8311=m
 CONFIG_SND_DUPLEX_CARD=m
 CONFIG_SND_HOBOT_SOUND_MACHINE=m
 CONFIG_SND_SIMPLE_CARD=m
+CONFIG_SND_HOBOT_SOUND_DUPLEX_HOST=m
 CONFIG_USB=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_STORAGE=y
