--- a/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
@@ -632,6 +632,7 @@ CONFIG_XZ_DEC=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=32
 CONFIG_PRINTK_TIME=y
+CONFIG_CONSOLE_LOGLEVEL_DEFAULT=6
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO_DWARF4=y
 CONFIG_GDB_SCRIPTS=y
