dts: hobot: feat [X5-1692] Add csi config in svb dts
Change-Id: I9d6999260c641cb28c4c8673cd80b0d86310df6c
Signed-off-by: zhenjian.he <zhenjian.he@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5-svb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-svb.dts
@@ -211,6 +211,8 @@
 				remote-endpoint = <&ov5640_to_mipi_csi0>;
 				clock-lanes = <0>;
 				data-lanes = <1 2>;
+				lane-rate = <400>;
+				vc_id = <0>;
 			};
 		};
 	};
@@ -225,6 +227,8 @@
 				remote-endpoint = <&ov5640_to_mipi_csi1>;
 				clock-lanes = <0>;
 				data-lanes = <1 2>;
+				lane-rate = <400>;
+				vc_id = <0>;
 			};
 		};
 	};
@@ -239,6 +243,8 @@
 				remote-endpoint = <&ov5640_to_mipi_csi2>;
 				clock-lanes = <0>;
 				data-lanes = <1 2>;
+				lane-rate = <400>;
+				vc_id = <0>;
 			};
 		};
 	};
@@ -253,6 +259,8 @@
 				remote-endpoint = <&ov5640_to_mipi_csi3>;
 				clock-lanes = <0>;
 				data-lanes = <1 2>;
+				lane-rate = <400>;
+				vc_id = <0>;
 			};
 		};
 	};
