configs: hobot feat [X5-1767] Enable dsp driver in configs
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: Icce8260aeeb2fe57be7506c9320658666e1b8ea3

--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -549,6 +549,7 @@ CONFIG_HOBOT_REMOTEPROC=y
 CONFIG_HOBOT_BPU=y
 CONFIG_BPU=m
 CONFIG_BPU_CORE=m
+CONFIG_HOBOT_DSP=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
