--- a/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
@@ -565,6 +565,7 @@ CONFIG_ION_HOBOT=y
 # CONFIG_ARM64_ERRATUM_858921 is not set
 CONFIG_MAILBOX=y
 CONFIG_DROBOT_LITE_MMU=y
+CONFIG_HOBOT_DSP=y
 CONFIG_REMOTEPROC=y
 CONFIG_HOBOT_REMOTEPROC=y
 CONFIG_HOBOT_BPU=y
