--- a/arch/arm64/configs/hobot_x5_fpga_defconfig
+++ b/arch/arm64/configs/hobot_x5_fpga_defconfig
@@ -451,6 +451,7 @@ CONFIG_RTL8723BS=m
 # CONFIG_HISILICON_ERRATUM_161010101 is not set
 # CONFIG_ARM64_ERRATUM_858921 is not set
 CONFIG_MAILBOX=y
+CONFIG_HOBOT_DSP=y
 CONFIG_REMOTEPROC=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_ARM_X5_DDRC_DEVFREQ=y
