dts: hobot: feat [X5-1767] Add dsp && ipc_hal node in dts
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: Ie599a3559915ae6f95abfce20ea4ab3c274d50a8

--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -463,6 +463,11 @@
 	remoteproc-ipc = <&ipc_instance1>;
 };
 
+&ipc_hal {
+	status = "okay";
+	ipc-hal = <&ipc_instance2>;
+};
+
 &hpsclks {
 	status = "okay";
 };
