--- a/arch/arm64/boot/dts/hobot/x5-evb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dts
@@ -760,3 +760,9 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&aon_gpio_7>;
 };
+
+&ipc_hal {
+	status = "okay";
+	ipc-hal = <&ipc_instance2>;
+};
+
