mailbox: feat [X5-1767] Enable ipc_hal compile && update driver to fix error in NO-RT patch system
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: Id7916b9a2cec270c35ad04345079a5e9baa0cc32

--- a/drivers/mailbox/hobot/ipc/Makefile
+++ b/drivers/mailbox/hobot/ipc/Makefile
@@ -24,4 +24,4 @@ $(HAL_MODULE_NAME)-y := os/kernel/ipc_hal.o
 obj-$(CONFIG_HB_IPC_SHM) += $(MODULE_NAME).o
 obj-$(CONFIG_HB_IPC_SHM) += ipc_test.o
 #obj-$(CONFIG_HB_IPC_SHM) += $(UIO_MODULE_NAME).o
-#obj-$(CONFIG_HB_IPC_SHM) += $(HAL_MODULE_NAME).o
+obj-$(CONFIG_HB_IPC_SHM) += $(HAL_MODULE_NAME).o
