vdsp: feat [X5-1767] Update vdsp driver to adapt current platform
Summary:
1. Delete unuseful information, including firmware path setting, vdsp_attr_groups which used to create sys node.
2. Modify function name.
3. Async mode not supported, comment out async function calls.
4. Fix compilation errors.

Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: I9dd91c502059d666a16862d3880744d60e18e661

--- a/drivers/soc/hobot/Makefile
+++ b/drivers/soc/hobot/Makefile
@@ -9,4 +9,4 @@ obj-y                                   += reboot_reason/
 obj-y                                   += ddr_monitor/
 obj-y                                   += firewall/
 obj-y                                   += camera_power/
-
+obj-y                                   += vdsp/
