dsp: chore [X5-1767] Replacing vdsp with dsp
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: Ie18f1b51b6d979fdc4d3c68ce35d82a2e5d6700d

--- a/drivers/soc/hobot/dsp/Makefile
+++ b/drivers/soc/hobot/dsp/Makefile
@@ -22,8 +22,8 @@ ccflags-y += -I${HBMOX_PATH}/platform/cpusys/
 
 ccflags-y += -I${srctree}/sound/soc/gua/
 
-obj-$(CONFIG_HOBOT_VDSP) += hobot_vdsp.o
-hobot_vdsp-objs += hobot_vdsp_dev.o
+obj-$(CONFIG_HOBOT_DSP) += hobot_dsp.o
+hobot_dsp-objs += hobot_dsp_dev.o
 
 all: FORCE
 	make -C ${OUTPUT_BUILD_DIR}/kernel M=$(PWD) modules
