feat(RDK-1.0.14): rebase with LNX6.1.83_PL5.1_V1.0.14_20241015-1849.fix rdk dts
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -789,12 +789,14 @@ CONFIG_HOBOT_MIPI_DEBUG=m
 CONFIG_VIDEO_VS_ISP_NAT=m
 CONFIG_VIDEO_VS_VSE_NAT=m
 CONFIG_VIDEO_VS_SIF_NAT=m
+CONFIG_VIDEO_VS_CAM_PULSE=m
 CONFIG_VIDEO_VS_ISP_V4L=m
 CONFIG_VIDEO_VS_VSE_V4L=m
 CONFIG_VIDEO_VS_SIF_V4L=m
 CONFIG_VIDEO_VS_GDC_ARM_V4L=m
 CONFIG_VIDEO_HOBOTC_JPU=m
 CONFIG_VIDEO_HOBOTC_VPU=m
+CONFIG_VIDEO_OV5640=m
 CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_VIDEO_VIVID=m
 # CONFIG_CXD2880_SPI_DRV is not set
