dts: hobot: chore [X5-1975] Rename dts according to hw naming, update "model" property
Summary:
1. Renamed dts file;
2. Expand placeholder size in socinfo for new naming convention;

Signed-off-by: dinggao.pan <dinggao.pan@d-robotics.cc>
Change-Id: Ie98c875de38e9d06ea62fdc655f19ca1b8397920

--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-1_a.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-1_a.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: GPL-2.0
 /*
- * dts for Sunrise5 EVB platform
+ * dts for Sunrise5 EVB 1_A board
  *
  * Copyright (C) 2024 D-Robotics Inc.
  *
@@ -15,8 +15,8 @@
 #include <autoconf.h>
 
 / {
-	model = "Horizon Robotics X5 EVB board";
-	compatible = "Horizon, x5";
+	model = "D-Robotics X5 EVB LP4 1_A board";
+	compatible = "D-Robotics, x5";
 
 	#address-cells = <2>;
 	#size-cells = <2>;
