--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-1_b.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-1_b.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: GPL-2.0
 /*
- * dts for Sunrise5 EVB-V2 platform
+ * dts for Sunrise5 EVB 1_B board
  *
  * Copyright (C) 2024 D-Robotics Inc.
  *
@@ -15,8 +15,8 @@
 #include <autoconf.h>
 
 / {
-	model = "Horizon Robotics X5 EVB-V2 board";
-	compatible = "Horizon, x5";
+	model = "D-Robotics X5 EVB LP4 1_B board";
+	compatible = "D-Robotics, x5";
 
 	#address-cells = <2>;
 	#size-cells = <2>;
