dts: hobot: chore [X5-1975] Update license
Signed-off-by: dinggao.pan <dinggao.pan@d-robotics.cc>
Change-Id: I5f3cec252433e40ada03e6e09c74c93c66e69c56

--- a/arch/arm64/boot/dts/hobot/pinmux-gpio.dtsi
+++ b/arch/arm64/boot/dts/hobot/pinmux-gpio.dtsi
@@ -1,4 +1,11 @@
 // SPDX-License-Identifier: GPL-2.0
+/*
+ * dtsi for pinctrl regarding gpio of Sunrise5 board
+ *
+ * Copyright(C) 2024, D-Robotics Co., Ltd. All rights reserved
+ *
+ */
+
  #include <dt-bindings/pinctrl/horizon-pinfunc.h>
  #include <dt-bindings/pinctrl/horizon-lsio-pinfunc.h>
  #include <dt-bindings/pinctrl/horizon-hsio-pinfunc.h>
