--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -2,7 +2,7 @@
 /*
  * dts for Sunrise5 EVB-V2 platform
  *
- * Copyright (C) 2024 Horizon Robotics Inc.
+ * Copyright (C) 2024 D-Robotics Inc.
  *
  */
 
