--- a/arch/arm64/boot/dts/hobot/x5-memory.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-memory.dtsi
@@ -2,7 +2,7 @@
 /*
  * dtsi for Sunrise5 platform
  *
- * Copyright (C) 2024 Horizon Robotics Inc.
+ * Copyright (C) 2024 D-Robotics Inc.
  *
  */
 
